# decentralized_voting_system

./: .gitignore  Cargo.toml  LICENSE  README.md  dfx.json  did.sh
src/decentralized_voting_system_backend/src/: Cargo.toml  decentralized_voting_system.did
src/decentralized_voting_system_backend/src/src/: ballot_creation.rs  lib.rs  result.rs  user_management.rs  voting.rs
src/decentrralized_voting_system_frontend/: index.htm  index.js
