name = "decentralized_voting_system"
version = "0.1.0"
edition = "2021"


[lib]
name = "decentralized_voting_system"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.1"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
validator = { version = "0.15", features = ["derive"] }